# Home-Credit-Default-Risk-ML

./: .dvcignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  dvc.yaml  main.py  pyproject.toml
.dvc/: config
Data/: Raw.dvc  final.dvc
Models/20260420_174015_balanced_catboost/reports/: evaluation_report.txt  feature_importance.csv  lift_deciles.csv  metrics.yaml  shap_feature_importance.csv  shap_metadata.yaml  shap_sample_predictions.csv  threshold_table.csv
Models/baseline/: evaluation_report.txt
Models/dvc_train/reports/: metrics.yaml
Models/hydra_runs/20260424_223633/.hydra/: config.yaml  hydra.yaml  overrides.yaml
Notebooks/: Baseline Model.ipynb
conf/: config.yaml
src/: download_data.py  inference.py  shap_analysis.py
src/analysis/: __init__.py  shap.py
src/api/: __init__.py  main.py  model_service.py  schemas.py
src/common/: artifacts.py  config_io.py  configure_dvc_remote.py  env.py  logging.py  schema.py
src/data_processing/: aggregations.py  constants.py  encoding.py  features.py  io.py  run_pipeline.py  validation.py
src/inference/: __init__.py  cli.py  core.py
src/model_training/: artifacts.py  config.py  evaluation.py  models.py  preprocessing.py  run_training.py  search.py  tracking.py
tests/: test_api_main.py  test_api_model_service.py  test_artifacts.py  test_configure_dvc_remote.py  test_data_validation.py  test_download_data.py  test_env.py  test_hydra_config.py  test_inference_core.py  test_main_args.py  test_tracking.py  test_training_config.py
